--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,9 @@ stractor = "stractor:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
+]
