--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ authors = [
     { name = "Francisco Filho", email = "francisco@capimgrosso.com" }
 ]
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "pydantic>=2.11.7",
+]
 
 [project.scripts]
 stractor = "stractor:main"
@@ -20,4 +22,6 @@ build-backend = "hatchling.build"
 dev = [
     "pytest>=8.4.1",
     "pytest-cov>=6.2.1",
+    "tree-sitter>=0.24.0",
+    "tree-sitter-language-pack>=0.7.3",
 ]
